Address code review comments: - Canonicalize payload before signing it - Change name of signature to signedEntryTimestamp - move signedEntryTimestamp and inclusionProof into separate Verification field in LogEntry
